frmPadecimientos (Diseño) frm RegistrarPadecimeintos (Diseño)

--- a/Sistema de Control de Historia Medica/Sistema de Control de Historia Medica.csproj
+++ b/Sistema de Control de Historia Medica/Sistema de Control de Historia Medica.csproj
@@ -68,6 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsBaseDatos.cs" />
+    <Compile Include="frmRegistrarPadecimientos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRegistrarPadecimientos.Designer.cs">
+      <DependentUpon>frmRegistrarPadecimientos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAnaliticas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmRegistrarPadecimientos.resx">
+      <DependentUpon>frmRegistrarPadecimientos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAnaliticas.resx">
       <DependentUpon>frmAnaliticas.cs</DependentUpon>
     </EmbeddedResource>
