--- a/Sistema de Control de Historia Medica/Sistema de Control de Historia Medica.csproj
+++ b/Sistema de Control de Historia Medica/Sistema de Control de Historia Medica.csproj
@@ -68,6 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsBaseDatos.cs" />
+    <Compile Include="frmRegistrarFarmacos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRegistrarFarmacos.Designer.cs">
+      <DependentUpon>frmRegistrarFarmacos.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmRegistrarPadecimientos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +148,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmRegistrarFarmacos.resx">
+      <DependentUpon>frmRegistrarFarmacos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmRegistrarPadecimientos.resx">
       <DependentUpon>frmRegistrarPadecimientos.cs</DependentUpon>
     </EmbeddedResource>
